--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,9 +15,9 @@
         completions."
     </string>
     <string name="title_activity_agreement">CardActivity</string>
-    <string name="tab_text_1">Home</string>
-    <string name="tab_text_2">Card</string>
-    <string name="tab_text_3">Traffic</string>
+    <string name="tab_text_1">Общие данные</string>
+    <string name="tab_text_2">Точки учёта</string>
+    <string name="tab_text_3">Обороты</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
 </resources>
